# rm_radio

./: send_test_msgs.py
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/radio_referee_parser/: .catkin
devel/.private/rm_common/: .catkin
devel/.private/rm_control/: .catkin  setup.fish  setup.sh
devel/.private/rm_dbus/: .catkin  setup.fish
devel/.private/rm_gazebo/: .catkin  .rosinstall  local_setup.fish  setup.fish
devel/.private/rm_hw/: .catkin  setup.fish
devel/.private/rm_msgs/: .catkin
devel/.private/rm_referee/: .catkin  setup.fish
devel/include/rm_msgs/: Buff.h  (+99 more)
logs/radio_referee_parser/: build.cmake.004.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.009.log.stderr  build.make.011.log.stderr  build.make.023.log.stderr  clean.unlink.003.log.stderr
logs/rm_msgs/: build.make.028.log.stderr
logs/rm_referee/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr
src/radio_referee_parser/: CMakeLists.txt  radio_referee_parser_plugins.xml
src/radio_referee_parser/include/radio_referee_parser/: radio_referee_parser.h
src/radio_referee_parser/launch/: radio_referee_parser.launch  test_parser.launch
src/radio_referee_parser/src/: radio_referee_parser.cpp
src/radio_referee_parser/src/rm_msgs/msg/referee/: RfidStatus.msg  SentryInfo.msg
(+646 files in other folders)
